expanded database
